Made Post Design

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -17,7 +17,15 @@
   <div class="posts">
     <h2>Recent Posts</h2>
     <div class="post" id="1">
-      hehe
+      <div class="counter">
+        <button class="upvote"><img src="../assets/svg/upvote.svg" alt="upvote"></button>
+        <span>0</span>
+        <button class="downvote"><img src="../assets/svg/downvote.svg" alt="downvote"></button>
+      </div>
+      <div class="content">
+        <h2>Arsen's Github</h2>
+        <p>(https://example.com)</p>
+      </div>
     </div>
   </div> 
 </div>
