--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,29 +2,31 @@
   <h1>Angular Forum Project</h1>
 </div>
 <div class="container">
-  <form class="creation">
+  <form class="creation" [formGroup]="frmPost" (ngSubmit)="addPost()">
     <h2>Create a Post</h2>
     <div class="frmGroup">
       <label for="title">Title</label>
-      <input type="text" id="title" placeholder="e.g. Arsen's Github">
+      <input type="text" id="title" placeholder="e.g. Arsen's Github" formControlName="title" [ngClass]="{'err': frmPost.get('title')?.invalid}">
+      <p class="error">{{frmPost.get("title")?.errors | validationMessage}}</p>
     </div>
     <div class="frmGroup">
-      <label for="link">Link</label>
-      <input type="text" id="link" placeholder="e.g. https://example.com/">
+      <label for="link">URL</label>
+      <input type="text" id="link" placeholder="e.g. https://example.com/" formControlName="link" [ngClass]="{'err': frmPost.get('link')?.invalid}">
+      <p class="error">{{frmPost.get("link")?.errors | validationMessage}}</p>
     </div>
-    <button type="submit">Create Post</button>
+    <button type="submit" [disabled]="frmPost.invalid">Create Post</button>
   </form>
   <div class="posts">
     <h2>Recent Posts</h2>
-    <div class="post" id="1">
+    <div class="post" *ngFor="let post of posts; let i = index" [id]="i">
       <div class="counter">
         <button class="upvote"><img src="../assets/svg/upvote.svg" alt="upvote"></button>
-        <span>0</span>
+        <span>{{post.points}}</span>
         <button class="downvote"><img src="../assets/svg/downvote.svg" alt="downvote"></button>
       </div>
       <div class="content">
-        <h2>Arsen's Github</h2>
-        <p>(https://example.com)</p>
+        <h2>{{post.title}}</h2>
+        <p>{{post.link}}</p>
       </div>
     </div>
   </div> 
