--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -20,9 +20,9 @@
     <h2>Recent Posts</h2>
     <div class="post" *ngFor="let post of posts; let i = index" [id]="i">
       <div class="counter">
-        <button class="upvote"><img src="../assets/svg/upvote.svg" alt="upvote"></button>
+        <button class="upvote" (click)="upvotePost(i)"><img src="../assets/svg/upvote.svg" alt="upvote"></button>
         <span>{{post.points}}</span>
-        <button class="downvote"><img src="../assets/svg/downvote.svg" alt="downvote"></button>
+        <button class="downvote" (click)="downvotePost(i)"><img src="../assets/svg/downvote.svg" alt="downvote"></button>
       </div>
       <div class="content">
         <h2>{{post.title}}</h2>
